linter first lab work done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=8081
+spring.datasource.url=jdbc:linter:linapid:localhost:1070:DEMO;autoCommit=true
+spring.datasource.username=SYSTEM
+spring.datasource.password=MANAGER
+spring.datasource.driver-class-name=com.relx.jdbc.LinterDriver
 
